--- a/hangman.css
+++ b/hangman.css
@@ -1,7 +1,94 @@
+
+
+/*header*/
 header{
-    background: #176087;
-    display: flex;
-    justify-content: space-between;
-    height:6rem;
+    background: #084566;
+    display:flex;
+    flex-direction:column;
+    height:8.5rem;
     text-align:center;
+    margin: none;
+    color:azure;
+
 }
+
+.Title{
+    padding-left: 50px;
+    width:500px;
+    color:white;
+    font-size:40px;
+    height: 3rem;
+    height:70%;
+    display:inline;
+}
+p{
+    font-size: 1.5rem;
+}
+.description{
+    font-size: 16px;
+}
+/*start menu*/
+
+container{
+    display:flex;
+    display:block;
+    align-items: center;
+    justify-content: center;
+}
+button{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #084566;
+    border-style: none;
+    color: aliceblue;
+    width: 16rem;
+    height: 6rem;
+    font-size: 2rem;
+    margin-top: 15rem;
+   
+}
+
+
+
+
+/*main game block*/
+li{
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2rem;
+    color: #084566;
+    text-align: right;
+}
+
+img {
+    max-height: 30rem;
+    max-width: 40rem;
+    margin-top: 2rem;
+}
+body{
+    margin: 0;
+    background-color: #97C7D8;
+    text-align: center;
+    
+}
+
+
+
+
+/*letters block`*/
+footer{
+    display:flex;
+    flex-direction:column;
+    background-color: #176087;
+    color:aliceblue;
+    text-align: center;
+    word-spacing: 1rem;
+    font-size: 2rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10rem;
+    display: none;
+}
+
