--- a/hangman.css
+++ b/hangman.css
@@ -45,7 +45,6 @@ button{
     width: 16rem;
     height: 6rem;
     font-size: 2rem;
-    margin-top: 15rem;
    
 }
 
@@ -62,25 +61,34 @@ li{
 }
 
 img {
-    max-height: 30rem;
-    max-width: 40rem;
+    max-height: 20rem;
+    max-width: 30rem;
     margin-top: 2rem;
 }
 body{
     margin: 0;
     background-color: #97C7D8;
     text-align: center;
-    
 }
 
+#submit{
+    width: 4rem;
+    height: 1.5rem;
+    font-size: small;
+}
+#guessArea{
+    display: flex;
+    flex-direction: column;
 
-
-
+}
+input{
+    width:max-content;
+}
 /*letters block`*/
 footer{
     display:flex;
     flex-direction:column;
-    background-color: #176087;
+    background-color: #084566;
     color:aliceblue;
     text-align: center;
     word-spacing: 1rem;
