--- a/hangman.css
+++ b/hangman.css
@@ -16,7 +16,7 @@ header{
     padding-left: 50px;
     width:500px;
     color:white;
-    font-size:40px;
+    font-size:80px;
     height: 3rem;
     height:70%;
     display:inline;
@@ -31,7 +31,6 @@ p{
 
 container{
     display:flex;
-    display:block;
     align-items: center;
     justify-content: center;
 }
@@ -48,7 +47,11 @@ button{
    
 }
 
-
+.buttons{
+    margin-top: 15rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
 
 
 /*main game block*/
@@ -61,9 +64,13 @@ li{
 }
 
 img {
-    max-height: 20rem;
-    max-width: 30rem;
-    margin-top: 2rem;
+    max-height: 23rem;
+    max-width: 33rem;
+    position: absolute;
+    left: 50%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
 }
 body{
     margin: 0;
@@ -75,14 +82,28 @@ body{
     width: 4rem;
     height: 1.5rem;
     font-size: small;
+    position: absolute;
+    left: 50%;
+    top: 75%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
 }
 #guessArea{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 10%;
 
 }
 input{
-    width:max-content;
+    width:11.5rem;
+    border:solid 1px #084566;
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
 }
 /*letters block`*/
 footer{
@@ -96,7 +117,8 @@ footer{
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 10rem;
+    height: 9rem;
     display: none;
+    margin-top: none;
 }
 
