--- a/hangman.css
+++ b/hangman.css
@@ -64,14 +64,24 @@ li{
 }
 
 img {
-    max-height: 23rem;
-    max-width: 33rem;
+    height: 23rem;
+    min-width: 33rem;
+}
+.images-container{
+    display:flex;
+    overflow: hidden;
+    width:33rem;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     position: absolute;
-    left: 50%;
+    left:50%;
+    border: 3px solid black;
     top: 45%;
     transform: translate(-50%, -50%);
-    padding: 10px;
 }
+
+
 body{
     margin: 0;
     background-color: #97C7D8;
@@ -98,7 +108,7 @@ body{
 }
 input{
     width:11.5rem;
-    border:solid 1px #084566;
+    border:solid 2px #084566;
     position: absolute;
     left: 50%;
     top: 70%;
