--- a/hangman.css
+++ b/hangman.css
@@ -14,6 +14,8 @@ header{
 ul{
     display: flex;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 40px;
 }
 .Title{
     padding-left: 50px;
@@ -147,4 +149,11 @@ footer{
 /*end game*/
 #end{
     display:none;
+    margin-top: 9rem;
+}
+#yes,#no{
+    margin-top: 1rem;
+}
+h2{
+    font-size:32px;
 }
